# Vector-Search-Engine

./: .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-commands.md  docker-compose.yml
src/: main.cpp
src/common/: types.hpp  vector_store.cpp  vector_store.h  vector_store.hpp
src/distance/: distance.cpp  distance.h  distance.hpp
src/index/: hnsw.cpp  hnsw.hpp
tests/: test_distance.cpp  test_hnsw.cpp  test_vector_store.cpp
